Fix spacing

--- a/frontend/src/styles/var_page.css
+++ b/frontend/src/styles/var_page.css
@@ -4,14 +4,13 @@ section.page.variable {
   left: 22%;
   border: none;
   font-family: 'Franklin Gothic Medium', 'Arial Wide', Arial, sans-serif;
-  margin-left: 220px;
+  margin-left: 250px;
   padding-top: 20px;
   width: 48%;
 }
 
 section.page.variable > form:first-of-type {
   position: relative;
-  margin-left: 30px;
   margin-top: 30px;
   padding: 40px;
   border: none;
